TL-16754 totara_form: aligned buttons correctly

--- a/totara/form/less/roots.less
+++ b/totara/form/less/roots.less
@@ -104,11 +104,18 @@
     }
 
     .totara_form_group_buttons {
-        width: 74%;
-        float: right;
         margin-left: 0;
         margin-top: 20px;
         text-align: left;
+
+        @media (min-width: 992px) {
+            width: 75%;
+            float: right;
+        }
+
+        input[type="submit"]:first-child {
+            margin-left: 0;
+        }
     }
 
     .totara_form_group_buttons div {
